--- a/CSharpPractice/CSharpPractice.csproj
+++ b/CSharpPractice/CSharpPractice.csproj
@@ -35,6 +35,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Leetcode\FirstMissingPositiveSol.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Leetcode\" />
+  </ItemGroup>
 </Project>
